fix header content align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,8 +29,8 @@
 }
 
 .banner-title {
-    font-weight: 700;
-    font-size: 65px;
+    font-weight: 600;
+    font-size: 60px;
 
 }
 
